Implement some server logic, few spec fixes
